--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>argo-demo</finalName>
+		<finalName>springboot-argocd-demo</finalName>
 	</build>
 
 </project>
